--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -23,10 +23,12 @@
         </Grid.RowDefinitions>
 
         <Menu VerticalAlignment="Top">
+            <MenuItem Header="Счета" x:Name="shetaM" Click="shetaM_Click"/>
             <MenuItem Header="Склад">
                 <MenuItem Header="Приходы" x:Name="prihodsM" Click="prihodsM_Click"/>
                 <MenuItem Header="Расходы" x:Name="rashodsM" Click="rashodsM_Click"/>
                 <MenuItem Header="Остатки" x:Name="ostatkiM" Click="ostatkiM_Click"/>
+                <MenuItem Header="Товары" x:Name="toavryM" Click="toavryM_Click"/>
             </MenuItem>
         </Menu>
 
