--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Client" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/AuthWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,8 +15,17 @@
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="FontFamily" Value="Segoe UI"/>
                         <Setter Property="FontSize" Value="14"/>
+                        <Setter Property="Padding" Value="0"/>
                     </Style>
                     <Style TargetType="TextBox" BasedOn="{StaticResource TextBoxExtend}">
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                        <Setter Property="Margin" Value="5"/>
+                        <Setter Property="FontFamily" Value="Segoe UI"/>
+                        <Setter Property="FontSize" Value="14"/>
+                        <Setter Property="hc:InfoElement.TitlePlacement" Value="Left"/>
+                    </Style>
+                    <Style TargetType="{x:Type hc:TextBox}" BasedOn="{StaticResource TextBoxExtend}">
                         <Setter Property="VerticalAlignment" Value="Center"/>
                         <Setter Property="HorizontalContentAlignment" Value="Left"/>
                         <Setter Property="Margin" Value="5"/>
@@ -44,8 +53,7 @@
                     </Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                         <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="HorizontalContentAlignment" Value="Left"/>
-                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
                         <Setter Property="Margin" Value="2"/>
                         <Setter Property="FontFamily" Value="Segoe UI"/>
                         <Setter Property="Padding" Value="0"/>
@@ -64,6 +72,10 @@
                         <Setter Property="Margin" Value="3"/>
                         <Setter Property="FontFamily" Value="Segoe UI"/>
                         <Setter Property="hc:InfoElement.TitlePlacement" Value="Left"/>
+                    </Style>
+                    <Style TargetType="{x:Type hc:NumericUpDown}" BasedOn="{StaticResource NumericUpDownPlus}">
+                        <Setter Property="hc:InfoElement.TitlePlacement" Value="Left"/>
+                        <Setter Property="Margin" Value="2"/>
                     </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
