--- a/Client/Pages/Sklad/RashodsPage.xaml
+++ b/Client/Pages/Sklad/RashodsPage.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d"  
       d:DesignHeight="450" d:DesignWidth="1600"
       xmlns:hc="https://handyorg.github.io/handycontrol" 
-                xmlns:usercontrols="clr-namespace:Client.UserControls" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                xmlns:usercontrols="clr-namespace:Client.UserControls" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodels="clr-namespace:Client.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:RashodyViewModel}">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
@@ -28,100 +28,46 @@
                 <ColumnDefinition Width="400"></ColumnDefinition>
                 <ColumnDefinition Width="100"></ColumnDefinition>
                 <ColumnDefinition Width="300"></ColumnDefinition>
-                <ColumnDefinition Width="180"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
                 <ColumnDefinition Width="180"></ColumnDefinition>
                 <ColumnDefinition Width="180"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <RadioButton x:Name="AllRB" GroupName="Periods" Content="Все" Checked="AllRB_Checked" Grid.Row="0" Grid.Column="0"/>
 
-            <RadioButton x:Name="PeriodsRB" GroupName="Periods" Grid.Row="1" Grid.Column="0" Checked="PeriodsRB_Checked">
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox x:Name="PeriodsCB" DisplayMemberPath="naim" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=PeriodsRB}" MinWidth="150" Background="White" SelectionChanged="PeriodsCB_SelectionChanged"  MinHeight="20" Height="23"/>
-                </StackPanel>
-            </RadioButton>
+            <DatePicker Grid.Row="1" Grid.Column="0" x:Name="datePickerStart" hc:InfoElement.Title="С" Width="200" SelectedDate="{Binding DateStart}"/>
+            <DatePicker Grid.Row="2" Grid.Column="0" x:Name="datePickerEnd" hc:InfoElement.Title="По" Width="200" SelectedDate="{Binding DateEnd}"/>
 
-            <RadioButton x:Name="DayRB" GroupName="Periods" Grid.Row="2" Grid.Column="0" Checked="DayRB_Checked" IsChecked="True">
-                <StackPanel Orientation="Horizontal">
-                    <DatePicker x:Name="DayDP"  IsEnabled="{Binding Path=IsChecked, ElementName=DayRB}" FirstDayOfWeek="Monday" MinWidth="120" SelectedDateChanged="DayDP_SelectedDateChanged" BorderBrush="Black"/>
-
-                    <Button x:Name="MinusDayBN" Click="MinusDayBN_Click" Margin="10 0">
-                        <materialDesign:PackIcon Kind="ChevronLeft" />
-                    </Button>
-                    <Button x:Name="PlusDayBN" Click="PlusDayBN_Click">
-                        <materialDesign:PackIcon Kind="ChevronRight" />
-                    </Button>
-                </StackPanel>
-            </RadioButton>
-
-            <RadioButton x:Name="DaysRB" GroupName="Periods" Grid.Row="3" Grid.Column="0" Checked="DaysRB_Checked">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="с " VerticalAlignment="Center"/>
-                    <DatePicker x:Name="DayStartDP"  IsEnabled="{Binding Path=IsChecked, ElementName=DaysRB}" FirstDayOfWeek="Monday" IsTodayHighlighted="True" MinWidth="120" SelectedDateChanged="DayStartDP_SelectedDateChanged" BorderBrush="Black"/>
-                    <TextBlock Text=" по " VerticalAlignment="Center"/>
-                    <DatePicker x:Name="DayEndDP"  IsEnabled="{Binding Path=IsChecked, ElementName=DaysRB}" FirstDayOfWeek="Monday" IsTodayHighlighted="True" MinWidth="120" SelectedDateChanged="DayEndDP_SelectedDateChanged" BorderBrush="Black"/>
-                </StackPanel>
-            </RadioButton>
-
-
-
-            <RadioButton x:Name="MonthRB" GroupName="Periods" Grid.Row="4" Grid.Column="0" Checked="MonthRB_Checked">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Год " VerticalAlignment="Center"/>
-                    <ComboBox x:Name="YearCB" ItemsSource="{Binding Years}" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=MonthRB}" MinWidth="60" SelectionChanged="MonthCB_SelectionChanged"/>
-
-                    <TextBlock Text="     Месяц " VerticalAlignment="Center"/>
-                    <ComboBox x:Name="MonthCB" ItemsSource="{Binding Months}" IsEditable="False" IsEnabled="{Binding Path=IsChecked, ElementName=MonthRB}" MinWidth="50" SelectionChanged="MonthCB_SelectionChanged"/>
-                </StackPanel>
-            </RadioButton>
+            <hc:SearchBar Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Margin="5"/>
 
             <usercontrols:ToolBarControl Grid.Row="5" Grid.Column="0" AddClick="AddBN_Click" SaveClick="SaveBN_Click" DeleteClick="ToolBarControl_DeleteClick" UpdateClick="ToolBarControl_UpdateClick" HorizontalAlignment="Right" Width="400"/>
 
-            <StackPanel Grid.Row="0" Grid.Column="3" Margin="5 0">
-                <TextBlock Text="Менеджер"/>
-                <ComboBox x:Name="ManagerCB" IsEditable="False" MinHeight="20" Height="23" ItemsSource="{Binding Spr_Managers_Filter}" SelectionChanged="ManagerCB_SelectionChanged"/>
-            </StackPanel>
-
-            <StackPanel Grid.Row="1" Grid.Column="3" Margin="5 0">
-                <TextBlock Text="Тип оплаты"/>
-                <ComboBox x:Name="TipOplatyCB" IsEditable="False" MinHeight="20" Height="23" ItemsSource="{Binding Spr_Oplat_Sklad}" DisplayMemberPath="naim" SelectionChanged="ManagerCB_SelectionChanged"/>
-            </StackPanel>
-
-            <StackPanel Grid.Row="0" Grid.Column="4" Margin="5 0">
-                <TextBlock Text="Отгружено"/>
-                <ComboBox x:Name="OtgruzhenoCB" IsEditable="False" MinHeight="20" Height="23" SelectionChanged="ManagerCB_SelectionChanged">
-                    <ComboBoxItem Content="Все"/>
-                    <ComboBoxItem Content="Да"/>
-                    <ComboBoxItem Content="Нет"/>
-                </ComboBox>
-            </StackPanel>
-
-            <StackPanel Grid.Row="1" Grid.Column="4" Margin="5 0">
-                <TextBlock Text="Товар оплачен"/>
-                <ComboBox x:Name="OplachenCB" IsEditable="False" MinHeight="20" Height="23" SelectionChanged="ManagerCB_SelectionChanged">
-                    <ComboBoxItem Content="Все"/>
-                    <ComboBoxItem Content="Да"/>
-                    <ComboBoxItem Content="Нет"/>
-                </ComboBox>
-            </StackPanel>
+            <hc:ComboBox hc:InfoElement.TitlePlacement="Left"  x:Name="ManagerCB" ShowClearButton="True" Grid.Row="0" Grid.Column="3" hc:InfoElement.Title="Отпустил" IsEditable="False" SelectedItem="{Binding SelectedManager}" ItemsSource="{Binding Spr_Managers_Filter}" DisplayMemberPath="Surname"/>
+            <hc:ComboBox hc:InfoElement.TitlePlacement="Left"  x:Name="TipOplatyCB" ShowClearButton="True"  Grid.Row="1" Grid.Column="3" hc:InfoElement.Title="Тип оплаты" IsEditable="False" SelectedItem="{Binding SelectedTipOpl}" ItemsSource="{Binding Spr_Oplat_Sklad}" DisplayMemberPath="naim"/>
+            <ComboBox x:Name="OtgruzhenoCB" Grid.Row="0" Grid.Column="4" hc:InfoElement.Title="Отгружено" IsEditable="False" 
+                      SelectedItem="{Binding SelectedOtgruzheno}" ItemsSource="{Binding EnumVseDaNet}"/>
+            <ComboBox x:Name="OplachenCB" Grid.Row="1" Grid.Column="4" hc:InfoElement.Title="Товар оплачен" IsEditable="False" 
+                      SelectedItem="{Binding SelectedOplachen}" ItemsSource="{Binding EnumVseDaNet}"/>
+            
         </Grid>
 
 
 
 
-        <DataGrid x:Name="datagridRashods" AutoGenerateColumns="False" Grid.Row="1" ItemsSource="{Binding Path=Rashods, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" CanUserAddRows="False" MouseDoubleClick="datagridRashods_MoseDoubleClick">
+        <DataGrid x:Name="datagridRashods" AutoGenerateColumns="False" Grid.Row="1" 
+                  ItemsSource="{Binding Path=Rashods, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" 
+                  CanUserAddRows="False" MouseDoubleClick="datagridRashods_MoseDoubleClick" hc:DataGridAttach.ShowRowNumber="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding kod_zap}" Header="Код" x:Name="kod_zap" Visibility="Collapsed"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Kod_zap}" Header="Код" x:Name="kod_zap" Visibility="Collapsed"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Nom_rash}" Header="№" x:Name="nom_rash" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Data_rash, StringFormat=dd.MM.yyyy}" Header="Дата" x:Name="data_rash" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Data_otgruzki, StringFormat=dd.MM.yyyy}" Header="Дата отгр." x:Name="data_otgr" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Otpustil}" Header="Отпустил" x:Name="otgr" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Date_rash, StringFormat=dd.MM.yyyy}" Header="Дата" x:Name="data_rash" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Date_otgruzki, StringFormat=dd.MM.yyyy}" Header="Дата отгр." x:Name="data_otgr" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Polz.Surname}" Header="Отпустил" x:Name="otgr" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Prim}" Header="Прим" x:Name="prim"></DataGridTextColumn>
-                <DataGridCheckBoxColumn Binding="{Binding IsTovOpl}" Header="Товар оплачен" x:Name="oplach"/>
+                <DataGridCheckBoxColumn Binding="{Binding Is_tov_opl}" Header="Товар оплачен" x:Name="oplach"/>
                 <DataGridCheckBoxColumn Binding="{Binding IsDostOpl}" Header="Дост. опл" x:Name="oplach_dost"/>
                 <DataGridCheckBoxColumn Binding="{Binding Otgruzheno}" Header="Отгружено" x:Name="otgruz"/>
                 <DataGridTextColumn Binding="{Binding Sheta.nom_1C}" Header="Счет" x:Name="shet" IsReadOnly="True"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Summa, StringFormat=N2}" Header="Нал" x:Name="summa_nal" IsReadOnly="True"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Summa_nal, StringFormat=N2}" Header="Нал" x:Name="summa_nal" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Summa_karta, StringFormat=N2}" Header="Карта" x:Name="summa_karta" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Summa_beznal, StringFormat=N2}" Header="Безнал" x:Name="summa_beznal" IsReadOnly="True"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Dolg, StringFormat=N2}" Header="Долг" x:Name="summa_dolg" IsReadOnly="True"></DataGridTextColumn>
