--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -6,14 +6,7 @@
         xmlns:local="clr-namespace:Client" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:usercontrols="clr-namespace:Client.UserControls"
         mc:Ignorable="d"
         Title="" Height="1080" Width="1920" WindowState="Maximized"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-     TextElement.FontWeight="Regular"
-     TextElement.FontSize="13"
-     TextOptions.TextFormattingMode="Ideal"
-     TextOptions.TextRenderingMode="Auto"
-     Background="{DynamicResource MaterialDesignPaper}"
-     FontFamily="{DynamicResource MaterialDesignFont}">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
