--- a/Client/Windows/AuthWindow.xaml
+++ b/Client/Windows/AuthWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.Windows" xmlns:hc="https://handyorg.github.io/handycontrol"
         mc:Ignorable="d"
-        Title="" Height="350" Width="400" WindowStartupLocation="CenterScreen">
+        Title="" Height="350" Width="400" WindowStartupLocation="CenterScreen" KeyDown="Window_KeyDown">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
 
         <TextBox x:Name="loginfdTB" hc:InfoElement.Placeholder="Логин" Width="0" MinHeight="0" Height="0" Visibility="Hidden"/>
