--- a/Client/Pages/ShetPage.xaml
+++ b/Client/Pages/ShetPage.xaml
@@ -11,7 +11,7 @@
 
     <Grid Background="White">
         <Grid.RowDefinitions>
-            <RowDefinition Height="250"></RowDefinition>
+            <RowDefinition Height="190"></RowDefinition>
             <RowDefinition/>
             <RowDefinition Height="200"></RowDefinition>
         </Grid.RowDefinitions>
@@ -20,8 +20,6 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="45"></RowDefinition>
                 <RowDefinition Height="42"></RowDefinition>
-                <RowDefinition Height="42"></RowDefinition>
-                <RowDefinition Height="40"></RowDefinition>
                 <RowDefinition Height="40"></RowDefinition>
                 <RowDefinition Height="50"></RowDefinition>
             </Grid.RowDefinitions>
@@ -40,12 +38,12 @@
             <DatePicker hc:InfoElement.Title="от" Grid.Row="0" Grid.Column="1" x:Name="DateDP" SelectedDate="{Binding Shet.date_sheta}" FirstDayOfWeek="Monday" IsTodayHighlighted="True" MinWidth="120" BorderBrush="Black"></DatePicker>
 
             <TextBox hc:InfoElement.Title="Примечание" x:Name="PrimTB" Text="{Binding Shet.prim, UpdateSourceTrigger=PropertyChanged}" 
-                     Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5" Grid.RowSpan="2" VerticalAlignment="Stretch" TextWrapping="Wrap"/>
+                     Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,5,5,5" Grid.RowSpan="2" VerticalAlignment="Stretch" TextWrapping="Wrap"/>
 
             <CheckBox Content="Оплачен" IsChecked="{Binding Shet.oplachen}" Grid.Row="5" Grid.Column="3" Height="28"/>
-            <CheckBox Content="Склад" IsChecked="{Binding Shet.sklad}" Grid.Row="5" Grid.Column="4" Height="28"/>
+            <CheckBox Content="Склад" IsChecked="{Binding Shet.sklad}" Grid.Row="5" Grid.Column="4" Height="28" Visibility="Collapsed"/>
             <CheckBox Content="Корр" IsChecked="{Binding Shet.korr}" Grid.Row="5" Grid.Column="5" Height="28"/>
-            <CheckBox Content="Прим как плат" IsChecked="{Binding Shet.prim_is_plat}" Grid.Row="5" Grid.Column="6" Height="28"/>
+            <CheckBox Content="Прим как плат" IsChecked="{Binding Shet.prim_is_plat}" Grid.Row="5" Grid.Column="6" Height="28" Visibility="Collapsed"/>
 
             <ComboBox IsEditable="False" Grid.Column="6" Grid.Row="1"
                           hc:InfoElement.Title="Отпустил"
@@ -67,13 +65,39 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Binding="{Binding kol}" Header="Кол-во" x:Name="kol"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding zena, StringFormat=\{0:N0\}}" Header="Цена" x:Name="zena"/>
-                <DataGridTextColumn Binding="{Binding summa, StringFormat=\{0:N0\}}" Header="Сумма" x:Name="summa" IsReadOnly="True"/>
-                <DataGridTextColumn Binding="{Binding summa_nds, StringFormat=\{0:N0\}}" Header="НДС" x:Name="summa_nds"/>
+                <DataGridTextColumn Binding="{Binding Kol}" Header="Кол-во" x:Name="kol"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Zena, StringFormat=\{0:N0\}}" Header="Цена" x:Name="zena"/>
+                <DataGridTextColumn Binding="{Binding Summa, StringFormat=\{0:N0\}}" Header="Сумма" x:Name="summa" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding summa_nds, StringFormat=\{0:N0\}}" Header="НДС" x:Name="summa_nds" Visibility="Collapsed"/>
             </DataGrid.Columns>
         </DataGrid>
 
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="300"/>
+            </Grid.ColumnDefinitions>
+
+            <ComboBox IsEditable="False" Grid.Column="0" Grid.Row="1"
+                          hc:InfoElement.Title="Отпустил"
+                          ItemsSource="{Binding Users}" DisplayMemberPath="Surname" SelectedValuePath="Id" 
+                          SelectedValue="{Binding Shet.id_polz}"/>
+
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="1" Text="{Binding Shet.SummaAll, StringFormat=Общая сумма {0}, TargetNullValue=0, FallbackValue=0}" FontSize="18" FontWeight="Bold"/>
+                <UniformGrid Grid.Row="2" Columns="2">
+                    <Button x:Name="PdfBTN" Content="PDF" Click="PdfBTN_Click"/>
+                    <Button x:Name="ExcelBTN" Content="Excel" Click="ExcelBTN_Click"/>
+                </UniformGrid>
+            </Grid>
+        </Grid>
+        
         <!--<Grid Grid.Row="2" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="300"></ColumnDefinition>
@@ -96,18 +120,7 @@
                 <TextBox hc:InfoElement.Title="Сумма карта" Text="{Binding Rashod.Summa_karta}"/>
             </UniformGrid>
 
-            <Grid Grid.Column="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <TextBlock Grid.Row="1" Text="{Binding Rashod.SummaAll, StringFormat=Общая сумма {0}, TargetNullValue=0, FallbackValue=0}" FontSize="18" FontWeight="Bold"/>
-                <UniformGrid Grid.Row="2" Columns="2">
-                    <Button x:Name="PdfBTN" Content="PDF" Click="PdfBTN_Click"/>
-                    <Button x:Name="ExcelBTN" Content="Excel" Click="ExcelBTN_Click"/>
-                </UniformGrid>
-            </Grid>
+           
         </Grid>-->
     </Grid>
 </ContentControl>
